konst/tests/misc_tests/destructure_rec_ui_tests/forget_attr_on_array-err.rs
type Array = [String; 4];

const fn to_bar(foo: Array) -> String {
    konst::destructure_rec!{
        #[forget_ignored_fields]
        [bar, ..] = foo
    }
    bar
}

fn main(){}